# account-info-integration

./: Cargo.toml  build.rs
proto/: AccountInfoIntegrationGrpc.proto  TradingInfoIntegrationGrpcService.proto
src/: lib.rs  main.rs  settings.rs
src/app/: app_ctx.rs
src/grpc_client/: mappers.rs  mod.rs  report_grpc_client.rs
src/grpc_server/: grpc_service.rs  server.rs
