[package]
name = "account-info-integration"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = { version = "*", features = ["tls", "tls-roots", "prost"] }
my-grpc-extensions = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-grpc-extensions.git" }
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

my-telemetry = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry.git" }
my-telemetry-writer = { tag = "0.3.0", git = "https://github.com/MyJetTools/my-telemetry-writer.git" }
flurl = { tag = "0.2.3", git = "https://github.com/MyJetTools/fl-url.git" }
my-settings-reader = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-settings-reader.git", features = [
    "background-reader",
] }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
prost = "*"
prost-types = "*"
chrono = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_yaml = "*"
async-trait = "*"
[build-dependencies]
tonic-build = "*"
